fixed overflow extra white space on mobile

--- a/index.css
+++ b/index.css
@@ -9,6 +9,8 @@
 
 }
 
+
+
 #giticon:hover{
 border-style: solid;
 border-color: white;
@@ -90,6 +92,7 @@ border-radius: 20px;
   width: 15%;
   text-align: center;
 
+
 }
 
 table{
@@ -108,9 +111,9 @@ th{
    color: #998087;
    font-family: 'Thasadith', sans-serif;
    white-space: nowrap;
+   overflow:hidden;
 
 }
-
 
 
 .aboutTitle:after {
@@ -130,9 +133,10 @@ th{
 }
 
 .description{
-max-width: 800px;
+  max-width: 800px;
   left: 50%;
   transform: translate(-50%, 0%);
+     overflow:hidden;
 }
 
 a.aboutAnchor {
@@ -140,27 +144,29 @@ a.aboutAnchor {
     position: relative;
     top: -50px;
     visibility: hidden;
+
 }
 
 .profilepic{
   border-radius: 50%;
-  margin-right: 20px;
+  padding-right: 20px;
   width: 250px;
-  height: 270px;
-  margin-top:-20px;
+  height: 240px;
+
   position: right;
 }
 
 .projectTitle{
-  margin-left: 40px;
+  padding-left: 40px;
    font-size: 40px;
    color: white;
-   margin-top:-100px
+   top:-100px;
+
 }
 
 
 .overlay {
-  margin-top: 7vh 3vw;
+  top: 7vh 3vw;
   width: 100%;
   text-align: center;
   font-size: calc(4vw + 4vh + 3vmin);
@@ -173,47 +179,58 @@ a.aboutAnchor {
   1px -1px 0 #000,
   -1px 1px 0 #000,
   1px 1px 0 #000;
+
+
 }
 
 #subOverlay {
   width: 100%;
   text-align: center;
   font-size: calc(.5vw + .5vh + 2vmin);
-   margin-top: -2vw;
+   top: -2vw;
 
 }
 
 
 .mb_parallax_container {
   height: 100vh;
-  width: 100vw;
+  width: auto;
   border-bottom: 5px solid white;
   padding-top: 20vh;
   background-attachment: fixed;
   background-size: cover;
   background-position:  top center;
   background-repeat: no-repeat;
+
 }
 
 .mb_parallax_overlay {
   height: 300px;
-  width: 600px;
+  width: auto;
   margin-left: 0;
   background-color: grey;
   opacity: .5;
       z-index: 2;
+
+
 }
 
 #mb_parallax_one {
   background-image: url(./img/mauveSFbg-compr.jpg);
       z-index: -1;
 
+
+
 }
 
 #mb_parallax_two {
   background-color:white;
+
+
 }
 
 #mb_parallax_three {
   background-image: url(./img/triangleBG.png);
+
+
 }
